2007-03-01  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* coot-utils.scm ((brighten-map imol)): added function 
	((brighten-maps)): Added function.
	((map-molecule-list)): Added function.
	((model-molecule-list)): Added function.

2007-02-09  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* libcheck.scm (monomer-molecule-from-3-let-code): Add code to
	check from the libcheck log file if this monomer had a minimal
	description.  If it did, then we need to read "libcheck.lib".

2006-11-03  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* fitting.scm (fit-waters): Give an error message in the status
	bar when the refinement map is not set [Bob Nolte problem?].

2006-09-14  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* shelx.scm: Add a function do-shelx-lst-file which is a
	stub/template/rough-draft of the function which takes a shelx lst
	file and makes an intersting-features-gui.

2006-08-30  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* coot.scm (load-all-scheme): cns2coot.scm added.

2006-08-30  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* Release 0.1.2.

2006-06-08  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* tips-gui.scm (tips-gui): Add a next Previous Tip button.

2006-04-04  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* coot.scm (load-all-scheme): move no-coot-tips here (from
	tips-gui) so that we can use this function in out .coot file
	(otherwise it is doesn't get defined when we do --no-graphics).

2006-04-03  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* fitting.scm (fit-protein): don't fit solvent chains here.

2006-03-30  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* mutate.scm (mutate-chain and several other functions): change
	syntax so that the documentation snarfer finds the function
	arguments.

	* coot-lsq.scm (simple-lsq-match and several other functions):
	change syntax so that the documentation snarfer finds the function
	arguments.

2005-11-13  Paul Emsley  <paulemsley@ysbl.york.ac.uk>

	* coot-utils.scm (number-list): changed to brain-dead but